syntax = "proto3";

option csharp_namespace = "Raft";

message LeaderQueryRequest{
}

message LeaderQueryReply{
  string host = 1;
  int32 port = 2;
}

service LeaderDiscoverySvc {
  rpc GetLeader (LeaderQueryRequest) returns (LeaderQueryReply);
}

message PingRequest{
}

message PingReply{
  string reply = 1;
}

service PingSvc {
  rpc Ping (PingRequest) returns (PingReply);
}